Revert "Fikset problem med NP på FolkeregisterStatus"
This reverts commit f8cf61d93b32454f2170d29e7906294f8860013f.